syntax = "proto3";
package river;
option go_package = "casablanca/internal";

import "protocol.proto";

message PersistedEvent {
    StreamEvent event = 1;
    Envelope envelope = 2;
    string hash_str = 3;
    string prev_miniblock_hash_str = 4;
    string creator_user_id = 5;
}

message PersistedMiniblock {
    bytes hash = 1;
    MiniblockHeader header = 2;
    repeated PersistedEvent events = 3;
}

message PersistedSyncedStream {
    SyncCookie sync_cookie = 1;
    uint64 last_snapshot_miniblock_num = 2;
    uint64 last_miniblock_num = 3;
    repeated PersistedEvent minipoolEvents = 4;
}
